# jimigpt

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
config/: fingerprint_tests.yaml  llm_routing.yaml  tone_rules.yaml
config/prompts/: anti_patterns.j2  base_identity.j2  communication_style.j2  emotional_disposition.j2  knowledge_awareness.j2  message_directive.j2  relational_stance.j2  trust_relationship.j2
docs/: category-architecture.md  foundation-per-feature.md  future-architecture.md  ideas-parking-lot.md  jimigpt-architecture.md  message-modeling.md  model-resilience-intelligence.md  strategic-deep-dive.md  unified-roadmap.md  user-testing-strategy.md
docs/features/: F01-personality-engine.md  F02-message-pipeline.md  F03-delivery-layer.md  F04-trust-safety.md  F05-database-auth-payments.md  F06-birthing-ceremony-api.md  F07-frontend-birthing.md  F08-feedback-refinement.md  F09-batch-runner-monitoring.md  INDEX.md  R01-llm-abstraction.md
docs/review/: REVIEW-WORKFLOW.md  architecture-customer-lens-review.md  codex-review-brief.md  fix-later-backlog.md  gemini-strategic-brief.md  message-testing-log.md  opus-review-brief.md  parallel-testing-rubric.md  patterns.md  triage-template.md  worktree-guide.md
docs/tasks/: completed.md  current-sprint.md
frontend/: CLAUDE.md
marketing/: MARKETING-FRAMEWORK.md  outreach-tracker.md  visual-content-guide.md
marketing/experiments/: experiment-log.md  observations.md
src/: main.py
src/api/: webhooks.py
src/shared/: llm.py  (+4 more)
tests/: conftest.py  test_health.py
(+83 files in other folders)
